# UH

DL_AI/ML_Specialization/: GradientComputation.ipynb
ECE6360/helloworld/: CMakeLists.txt  README  vcpkg.json
ECE6360/helloworld/src/: display.cpp  gui.cpp  helloworld.h  main.cpp  ray.h  vec3.h
ECE6397_AdvancedML/: README  requirements.txt
ECE6397_AdvancedML/Assignment/: NeuralNetworks.ipynb  Tuan-Minh-Pham_Assignment-1_NeuralNetworks.ipynb
HPE_DSI/212_Scientific-Programming-with-Python/: 2517443_Tuan_Minh_Pham_Assignment_1.ipynb  2517443_Tuan_Minh_Pham_Split_D_check_assignment.ipynb
